--- a/arch/arm/configs/socfpga_adi_defconfig
+++ b/arch/arm/configs/socfpga_adi_defconfig
@@ -140,6 +140,7 @@ CONFIG_ADMC=y
 CONFIG_ALTERA_XCVR=y
 CONFIG_AD9523=y
 CONFIG_AD9528=y
+CONFIG_AD9548=y
 CONFIG_CF_AXI_DDS=y
 CONFIG_CF_AXI_DDS_AD9144=y
 CONFIG_JESD204=y
