--- a/drivers/iio/frequency/Makefile
+++ b/drivers/iio/frequency/Makefile
@@ -6,8 +6,9 @@
 obj-$(CONFIG_AD9508) += ad9508.o
 obj-$(CONFIG_AD9517) += ad9517.o
 obj-$(CONFIG_AD9523) += ad9523.o
-obj-$(CONFIG_AD9528) += ad9528.o
+#obj-$(CONFIG_AD9528) += ad9528.o # latter than ad9548 because it's source to ad9528 
 obj-$(CONFIG_AD9548) += ad9548.o
+obj-$(CONFIG_AD9528) += ad9528.o
 obj-$(CONFIG_ADF4350) += adf4350.o
 obj-$(CONFIG_ADF5355) += adf5355.o
 cf_axi_dds_drv-y := cf_axi_dds.o cf_axi_dds_buffer_stream.o
