--- a/arch/arm/boot/dts/a10ad9371foxconn_ad9528.dtsi
+++ b/arch/arm/boot/dts/a10ad9371foxconn_ad9528.dtsi
@@ -12,26 +12,7 @@
 	};
 };
 
-&fmc_spi {
-
-	clksync0_ad9548: ad9548-lpc@2 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		compatible = "adi,ad9548";
-		reg = <2>;
-		//spi-3wire;
-		spi-max-frequency = <10000000>;
-	};
-
-	clksync1_lmk04828: lmk04828-spi@3 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		compatible = "lmk04828";//spidev
-		reg = <3>;
-		//spi-3wire;
-		spi-max-frequency = <10000000>;
-	};
- 
+&sys_spi {
 	clk0_ad9528: ad9528-1@0 {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -41,6 +22,8 @@
 		spi-max-frequency = <10000000>;
 		//adi,spi-3wire-enable;
 		reg = <0>;
+
+		reset-gpios = <&sys_gpio_out 27 0>;
 
 		clock-output-names = "ad9528-1_out0", "ad9528-1_out1", "ad9528-1_out2", "ad9528-1_out3", "ad9528-1_out4", "ad9528-1_out5", "ad9528-1_out6", "ad9528-1_out7", "ad9528-1_out8", "ad9528-1_out9", "ad9528-1_out10", "ad9528-1_out11", "ad9528-1_out12", "ad9528-1_out13";
 		adi,vcxo-freq = <122880000>;
@@ -53,7 +36,6 @@
 		/* PLL1 config */
 		adi,pll1-feedback-div = <4>;
 		adi,pll1-charge-pump-current-nA = <5000>;
-
 
 		/* PLL2 config */
 		adi,pll2-vco-div-m1 = <3>; /* use 5 for 184320000 output device clock */
@@ -78,7 +60,7 @@
 
 		ad9528_0_c6: channel@6 {
 			reg = <6>;
-			adi,extended-name = "DEV_CLK";
+			adi,extended-name = "DEV_CLK_N1";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -87,7 +69,7 @@
 
 		ad9528_0_c3: channel@3 {
 			reg = <3>;
-			adi,extended-name = "FMC_CLK";
+			adi,extended-name = "FMC_CLK_M1";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -96,7 +78,7 @@
 
 		ad9528_0_c5: channel@5 {
 			reg = <5>;
-			adi,extended-name = "DEV_SYSREF";
+			adi,extended-name = "DEV_SYSREF_N1";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -105,7 +87,7 @@
 
 		ad9528_0_c2: channel@2 {
 			reg = <2>;
-			adi,extended-name = "FMC_SYSREF";
+			adi,extended-name = "FMC_SYSREF_M1";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -114,7 +96,7 @@
 
 		ad9528_0_c0: channel@0 {
 			reg = <0>;
-			adi,extended-name = "DEV_SYSREF_UB";
+			adi,extended-name = "DEV_SYSREF_N2";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -123,7 +105,7 @@
 
 		ad9528_0_c1: channel@1 {
 			reg = <1>;
-			adi,extended-name = "DEV_CLK_UB";
+			adi,extended-name = "DEV_CLK_N2";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -132,7 +114,7 @@
 
 		ad9528_0_c7: channel@7 {
 			reg = <7>;
-			adi,extended-name = "DEV_SYSREF_UD";
+			adi,extended-name = "DEV_SYSREF_N4";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -141,7 +123,7 @@
 
 		ad9528_0_c8: channel@8 {
 			reg = <8>;
-			adi,extended-name = "DEV_CLK_UD";
+			adi,extended-name = "DEV_CLK_N4";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -150,7 +132,7 @@
 
 		ad9528_0_c12: channel@12 {
 			reg = <12>;
-			adi,extended-name = "DEV_SYSREF_UC";
+			adi,extended-name = "DEV_SYSREF_N3";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -159,7 +141,7 @@
 
 		ad9528_0_c13: channel@13 {
 			reg = <13>;
-			adi,extended-name = "DEV_CLK_UC";
+			adi,extended-name = "DEV_CLK_N3";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
@@ -168,86 +150,20 @@
 
 		ad9528_0_c9: channel@9 {
 			reg = <9>;
-			adi,extended-name = "FMC_SYSREF_1";
+			adi,extended-name = "FMC_SYSREF_M2";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
 			adi,signal-source = <SOURCE_SYSREF_VCO>;
 		};
 
-		ad9528_0_c10: channel@10 {
-			reg = <10>;
-			adi,extended-name = "FMC_CLK_1";
+		ad9528_0_c11: channel@11 {
+			reg = <11>;
+			adi,extended-name = "FMC_CLK_M2";
 			adi,driver-mode = <DRIVER_MODE_LVDS>;
 			adi,divider-phase = <0>;
 			adi,channel-divider = <10>;
 			adi,signal-source = <SOURCE_VCO>;
 		};
 	};
-
-
-	trx0_ad9371: ad9371-phy@1 {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		#clock-cells = <1>;
-		compatible = "ad9371";
-
-		interrupt-parent = <&intc>;                                      
-        interrupts = <0 31 4>;
-
-		/* SPI Setup */
-		reg = <1>;
-		spi-max-frequency = <25000000>;
-
-		/* Clocks */
-		clocks = <&axi_ad9371_rx_jesd>, <&axi_ad9371_tx_jesd>, <&axi_ad9371_rx_os_jesd>, <&clk0_ad9528 6>, <&clk0_ad9528 3>;
-		clock-names = "jesd_rx_clk", "jesd_tx_clk", "jesd_rx_os_clk", "dev_clk", "fmc_clk";
-		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk";
-
-		adi,clocks-clk-pll-vco-freq_khz = <9830400>;
-		adi,clocks-device-clock_khz = <122880>;
-		adi,clocks-clk-pll-hs-div = <4>;
-		adi,clocks-clk-pll-vco-div = <2>;
-
-		adi,jesd204-obs-framer-over-sample = <0>;
-
-		adi,rx-profile-adc-div = <1>;
-		adi,rx-profile-en-high-rej-dec5 = <1>;
-		adi,rx-profile-iq-rate_khz = <30720>;
-		adi,rx-profile-rf-bandwidth_hz = <20000000>;
-		adi,rx-profile-rhb1-decimation = <2>;
-		adi,rx-profile-rx-bbf-3db-corner_khz = <20000>;
-		adi,rx-profile-rx-dec5-decimation = <5>;
-		adi,rx-profile-rx-fir-decimation = <4>;
-
-		adi,obs-profile-adc-div = <1>;
-		adi,obs-profile-en-high-rej-dec5 = <1>;
-		adi,obs-profile-iq-rate_khz = <61440>;
-		adi,obs-profile-rf-bandwidth_hz = <20000000>;
-		adi,obs-profile-rhb1-decimation = <2>;
-		adi,obs-profile-rx-bbf-3db-corner_khz = <20000>;
-		adi,obs-profile-rx-dec5-decimation = <5>;
-		adi,obs-profile-rx-fir-decimation = <2>;
-
-		adi,tx-profile-dac-div = <1>;
-		adi,tx-profile-iq-rate_khz = <61440>;
-		adi,tx-profile-primary-sig-bandwidth_hz = <20000000>;
-		adi,tx-profile-rf-bandwidth_hz = <20000000>;
-		adi,tx-profile-thb1-interpolation = <2>;
-		adi,tx-profile-thb2-interpolation = <2>;
-		adi,tx-profile-tx-bbf-3db-corner_khz = <20000>;
-		adi,tx-profile-tx-dac-3db-corner_khz = <92000>;
-		adi,tx-profile-tx-fir-interpolation = <2>;
-		adi,tx-profile-tx-input-hb-interpolation = <1>;
-
-		adi,sniffer-profile-adc-div = <1>;
-		adi,sniffer-profile-en-high-rej-dec5 = <1>;
-		adi,sniffer-profile-iq-rate_khz = <30720>;
-		adi,sniffer-profile-rf-bandwidth_hz = <20000000>;
-		adi,sniffer-profile-rhb1-decimation = <2>;
-		adi,sniffer-profile-rx-bbf-3db-corner_khz = <20000>;
-		adi,sniffer-profile-rx-dec5-decimation = <5>;
-		adi,sniffer-profile-rx-fir-decimation = <4>;
-	};
 };
-
