--- a/arch/arm/boot/dts/a10ad9371foxconn_mgp.dts
+++ b/arch/arm/boot/dts/a10ad9371foxconn_mgp.dts
@@ -1,7 +1,146 @@
 /dts-v1/;
-#include "a10ad9371foxconn_base.dtsi"
-#include "a10ad9371foxconn_mgp_clk.dtsi"
-#include "a10ad9371foxconn_mgp_n1.dtsi"
-#include "a10ad9371foxconn_mgp_n2.dtsi"
-#include "a10ad9371foxconn_mgp_n3.dtsi"
-#include "a10ad9371foxconn_mgp_n4.dtsi"
+#include "socfpga_arria10_socdk.dtsi"
+
+&mmc {
+	status = "okay";
+	num-slots = <1>;
+	cap-sd-highspeed;
+	broken-cd;
+	bus-width = <4>;
+	altr,dw-mshc-ciu-div = <3>;
+	altr,dw-mshc-sdr-timing = <0 3>;
+};
+
+/ {
+	clocks {
+		sys_clk: sys_clk {
+			#clock-cells = <0>;
+			compatible = "fixed-clock";
+			clock-frequency = <100000000>;
+			clock-output-names = "system_clock";
+		};
+
+		dma_clk: dma_clk {
+			#clock-cells = <0x0>;
+			compatible = "fixed-clock";
+			clock-frequency = <250000000>;
+			clock-output-names = "dma_clk";
+		};
+	};
+
+	soc {
+		sys_hps_bridges: bridge@ff200000 {
+			compatible = "simple-bus";
+			reg = <0xff200000 0x00200000>;
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges = <0x00000000 0xff200000 0x00200000>;
+
+			sys_gpio_out: gpioctrl@20 {
+				compatible = "altr,pio-1.0";
+				reg = <0x00000020 0x00000010>;
+				altr,gpio-bank-width = <32>;
+				resetvalue = <0>;
+				#gpio-cells = <2>;
+				gpio-controller;
+			};
+
+			sys_spi: spi@40 {
+				compatible = "altr,spi-1.0";
+				reg = <0x00000040 0x00000020>;
+				interrupt-parent = <&intc>;
+				interrupts = <0 26 4>;
+				#address-cells = <0x1>;
+				#size-cells = <0x0>;
+			};
+
+			/* Documentation/devicetree/bindings/interrupt-controller/arm,gic.txt */
+			/* Documentation/devicetree/bindings/gpio/gpio-altera.txt */
+			sys_gpio_in: gpioctrl@0 {
+	   			gpio-controller;
+	   			reg = <0x00000000 0x10>;
+				altr,gpio-bank-width = <32>;
+				resetvalue = <0>;
+	   			#gpio-cells = <2>;
+	   			compatible = "altr,pio-1.0";
+
+				/* gpioin31irq */
+	   			interrupt-controller;
+				gpios = <&sys_gpio_in 31 0>;
+				/* irq-type irq-number low-to-high-edge */
+				/* irq-number = 24(FPGA_IRQ_BASE) + specific irq vector */
+	   			interrupts = <0 24 1>;
+	   			#interrupt-cells = <1>;
+	   			altr,interrupt-type = <IRQ_TYPE_EDGE_RISING>;
+			};
+
+			/* Documentation/devicetree/bindings/pps/pps-gpio.txt  */
+			pps_gpioin31: pps-gpio@31 {
+				compatible = "pps-gpio";
+				gpios = <&sys_gpio_in 31 0>;
+				/* comment means assert is indicated by a rising edge */
+				assert-rising-edge;
+			};
+
+			fpga_tse_gemac: tse_gemac@ff250000 {
+				compatible = "altr,tse-1.0";
+				reg = <0xff250000 0x800>;
+				reg-names = "control_port";
+				clocks = <&sys_clk>;
+				clock-names = "dgmaceth";
+				//resets = <&rst EMAC0_RESET>;
+				//reset-names = "stmmaceth";
+				//interrupts = <0 92 IRQ_TYPE_LEVEL_HIGH>;
+				//interrupt-names = "macirq";
+				address-bits = <48>;
+				max-frame-size = <1518>;
+				/* Filled in by bootloader */
+				//mac-address = [00 00 00 00 00 00];
+				local-mac-address = [00 00 00 00 00 00];
+				//snps,multicast-filter-bins = <256>;
+				//snps,perfect-filter-entries = <128>;
+				tx-fifo-depth = <8192>;
+				rx-fifo-depth = <32768>;
+				altr,enable-sup-addr = <0>;
+				altr,enable-hash = <0>;
+				phy-mode = "sgmii";
+				phy-addr = <0>;
+				pcs-addr = <0>;
+				fpga_tse_gemac_mdio: mdio@ff22e400 {
+					compatible = "altr,tse-mdio";
+					#address-cells = <1>;
+					#size-cells = <0>;
+				};
+			};
+		};
+	};
+};
+
+&sys_spi {
+	clksyn_ad9548: clksyn_ad9548@2 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		compatible = "adi,ad9548";
+
+		reg = <2>;
+		//spi-3wire; HW design is 4wire mode
+		spi-max-frequency = <10000000>;
+	};
+
+	clkgen_lmk04828: clkgen_lmk04828@3 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		compatible = "ti,lmk04828";
+
+		reg = <3>;
+		//spi-3wire; HW design is 4wire mode
+		spi-max-frequency = <10000000>;
+	};
+};
+
+#include "i2c_dev_si5338.dtsi"
+#include "a10ad9371foxconn_ad9528.dtsi"
+#include "a10ad9371foxconn_ad9371n1.dtsi"
+//#include "a10ad9371foxconn_ad9371n2.dtsi"
+//#include "a10ad9371foxconn_ad9371n3.dtsi"
+//#include "a10ad9371foxconn_ad9371n4.dtsi"
