--- a/arch/arm/boot/dts/a10ad9371foxconn_ad9371n2.dtsi
+++ b/arch/arm/boot/dts/a10ad9371foxconn_ad9371n2.dtsi
@@ -5,7 +5,7 @@
 		reg = <0x00080000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 20 0>;     //no  connected
+		interrupts = <0 20 IRQ_TYPE_NONE>; //disconnected
 
 		clocks = <&sys_clk>, <&n2_tx_device_clk_pll>, <&n2_axi_ad9371_tx_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -26,7 +26,7 @@
 		reg = <0x00090000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 21 0>;
+		interrupts = <0 21 IRQ_TYPE_NONE>;
 
 		clocks = <&sys_clk>, <&n2_rx_device_clk_pll>, <&n2_axi_ad9371_rx_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -46,7 +46,7 @@
 		reg = <0x000a0000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 22 0>;
+		interrupts = <0 22 IRQ_TYPE_NONE>;
 
 		clocks = <&sys_clk>, <&n2_rx_os_device_clk_pll>, <&n2_axi_ad9371_rx_os_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -110,7 +110,7 @@
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0008c000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 35 4>;
+		interrupts = <0 35 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -126,7 +126,7 @@
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x0009c000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 36 4>;
+		interrupts = <0 36 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -141,7 +141,7 @@
 		compatible = "adi,axi-dmac-1.00.a";
 		reg = <0x000ac000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 37 4>;
+		interrupts = <0 37 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -211,7 +211,7 @@
 		compatible = "altr,spi-1.0";
 		reg = <0x00060040 0x00000020>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 39 4>;
+		interrupts = <0 39 IRQ_TYPE_LEVEL_HIGH>;
 		#address-cells = <0x1>;
 		#size-cells = <0x0>;
 	};
