--- a/arch/arm/boot/dts/socfpga_arria10.dtsi
+++ b/arch/arm/boot/dts/socfpga_arria10.dtsi
@@ -585,7 +585,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <0xffda5000 0x100>;
-			interrupts = <0 102 4>;
+			interrupts = <0 102 IRQ_TYPE_LEVEL_HIGH>;
 			num-chipselect = <4>;
 			bus-num = <0>;
 			/*32bit_access;*/
@@ -595,7 +595,7 @@
 			status = "disabled";
 		};
 
-		sdr: sdr@ffc25000 {
+		sdr: sdr@ffcfb100 {
 			compatible = "altr,sdr-ctl", "syscon";
 			reg = <0xffcfb100 0x80>;
 		};
@@ -630,7 +630,7 @@
 			reg = <0xffb90000 0x72000>,
 			      <0xffb80000 0x10000>;
 			reg-names = "nand_data", "denali_reg";
-			interrupts = <0 99 4>;
+			interrupts = <0 99 IRQ_TYPE_LEVEL_HIGH>;
 			dma-mask = <0xffffffff>;
 			clocks = <&nand_clk>;
 			status = "disabled";
@@ -770,7 +770,7 @@
 			clock-names = "timer";
 		};
 
-		timer3: timer3@ffd00100 {
+		timer3: timer3@ffd01000 {
 			compatible = "snps,dw-apb-timer";
 			interrupts = <0 118 IRQ_TYPE_LEVEL_HIGH>;
 			reg = <0xffd01000 0x100>;
