--- a/arch/arm/boot/dts/a10ad9371foxconn_ad9371n4.dtsi
+++ b/arch/arm/boot/dts/a10ad9371foxconn_ad9371n4.dtsi
@@ -285,5 +285,26 @@
 		adi,sniffer-profile-rx-bbf-3db-corner_khz = <100000>;
 		adi,sniffer-profile-rx-dec5-decimation = <5>;
 		adi,sniffer-profile-rx-fir-decimation = <4>;
+
+		/* Jacky:2018/07/25: enable pin-mode 
+		   https://wiki.analog.com/resources/tools-software/linux-drivers/iio-transceiver/ad9371-customization */
+		adi,arm-gpio-use-rx2-enable-pin = 1;// 0= RX1_ENABLE controls RX1 and RX2, 1 = separate RX1_ENABLE/RX2_ENABLE pins
+		adi,arm-gpio-use-tx2-enable-pin = 1;// 0= TX1_ENABLE controls TX1 and TX2, 1 = separate TX1_ENABLE/TX2_ENABLE pins
+		adi,arm-gpio-tx-rx-pin-mode = 1;	// 0= ARM command mode, 1 = Pin mode to power up Tx/Rx chains
+		adi,arm-gpio-orx-pin-mode = 1;		// 0= ARM command mode, 1 = Pin mode to power up ObsRx receiver
+		// to be tested: enable pin-mode but NOT enable gpio-ack
+		adi,arm-gpio-orx-trigger-pin = 0;	// Select desired GPIO pin (valid 4-15)
+		adi,arm-gpio-orx-mode2-pin = 0;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode1-pin = 0;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-orx-mode0-pin = 0;		// Select desired GPIO pin (valid 0-18)
+		adi,arm-gpio-rx1-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-rx2-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx1-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx2-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx1-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-orx2-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-srx-enable-ack = 0;	// Select desired GPIO pin (0-15), [4] = Output Enable
+		adi,arm-gpio-tx-obs-select = 0;		// Select desired GPIO pin (0-15), [4] = Output Enable When 2Tx are used with only 1 ORx input, this GPIO tells the BBIC which Tx channel is active for calibrations, so BBIC can route correct RF Tx path into the single ORx input
+		adi,arm-gpio-enable-mask = 0;
 	};
 };
