Result: ad9371n1 work with old RBF; ad9371n1-n2 both work with new RBF Changes:   1, FPGA have changed ad9371n2 with n3's address mapping, so change ad9371n2.dtsi   2, dos2unix/format-adjust ad9548.c; dt node rename 'clksyn_ad9548' to 'clksyn'   3, dos2unix/format-adjust ad9528.c; add a few line for error print;   4. dos2unix ti_lmk04828.c; dt node rename 'clkgen_lmk04828' into 'clkgen'

--- a/arch/arm/boot/dts/a10ad9371foxconn.dts
+++ b/arch/arm/boot/dts/a10ad9371foxconn.dts
@@ -86,20 +86,20 @@
 };
 
 &sys_spi {
-	clksyn_ad9548: clksyn_ad9548@2 {
+	clksyn_ad9548: clksyn@2 {
 		#address-cells = <1>;
 		#size-cells = <0>;
-		compatible = "adi,ad9548";
+		compatible = "adi,ad9548","spidev";
 
 		reg = <2>;
 		//spi-3wire; HW design is 4wire mode
 		spi-max-frequency = <10000000>;
 	};
 
-	clkgen_lmk04828: clkgen_lmk04828@3 {
+	clkgen_lmk04828: clkgen@3 {
 		#address-cells = <1>;
 		#size-cells = <0>;
-		compatible = "ti,lmk04828";
+		compatible = "ti,lmk04828","spidev";
 
 		reg = <3>;
 		//spi-3wire; HW design is 4wire mode
