--- a/arch/arm/boot/dts/a10ad9371foxconn_ad9371n2_old.dtsi
+++ b/arch/arm/boot/dts/a10ad9371foxconn_ad9371n2_old.dtsi
@@ -1,11 +1,11 @@
 
 &sys_hps_bridges {
-	n2_axi_ad9371_tx_jesd: axi-jesd204-tx@e0000 {
+	n2_axi_ad9371_tx_jesd: axi-jesd204-tx@80000 {
 		compatible = "adi,axi-jesd204-tx-1.0";
-		reg = <0x000e0000 0x4000>;
+		reg = <0x00080000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 23 IRQ_TYPE_NONE>;
+		interrupts = <0 20 IRQ_TYPE_NONE>; //disconnected
 
 		clocks = <&sys_clk>, <&n2_tx_device_clk_pll>, <&n2_axi_ad9371_tx_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -21,12 +21,12 @@
 		clock-output-names = "n2_jesd_tx_lane_clk";
 	};
 
-	n2_axi_ad9371_rx_jesd: axi-jesd204-rx@f0000 {
+	n2_axi_ad9371_rx_jesd: axi-jesd204-rx@90000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
-		reg = <0x000f0000 0x4000>;
+		reg = <0x00090000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 51 IRQ_TYPE_NONE>;
+		interrupts = <0 21 IRQ_TYPE_NONE>;
 
 		clocks = <&sys_clk>, <&n2_rx_device_clk_pll>, <&n2_axi_ad9371_rx_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -41,12 +41,12 @@
 		clock-output-names = "n2_jesd_rx_lane_clk";
 	};
 
-	n2_axi_ad9371_rx_os_jesd: axi-jesd204-rx@100000 {
+	n2_axi_ad9371_rx_os_jesd: axi-jesd204-rx@a0000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
-		reg = <0x00100000 0x4000>;
+		reg = <0x000a0000 0x4000>;
 
 		interrupt-parent = <&intc>;
-		interrupts = <0 25 IRQ_TYPE_NONE>;
+		interrupts = <0 22 IRQ_TYPE_NONE>;
 
 		clocks = <&sys_clk>, <&n2_rx_os_device_clk_pll>, <&n2_axi_ad9371_rx_os_xcvr>;
 		clock-names = "s_axi_aclk", "device_clk", "lane_clk";
@@ -61,14 +61,14 @@
 		clock-output-names = "n2_jesd_rx_os_lane_clk";
 	};
 
-	 n2_axi_ad9371_tx_xcvr: axi-ad9371-tx-xcvr@e4000 {
+	 n2_axi_ad9371_tx_xcvr: axi-ad9371-tx-xcvr@84000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
-		reg = <0x000e4000 0x00001000>,
-			<0x000e6000 0x00001000>,
-			<0x000e8000 0x00001000>,
-			<0x000e9000 0x00001000>,
-			<0x000ea000 0x00001000>,
-			<0x000eb000 0x00001000>;
+		reg = <0x00084000 0x00001000>,
+			<0x00086000 0x00001000>,
+			<0x00088000 0x00001000>,
+			<0x00089000 0x00001000>,
+			<0x0008a000 0x00001000>,
+			<0x0008b000 0x00001000>;
 		reg-names = "adxcvr", "atx-pll", "adxcfg-0", "adxcfg-1", "adxcfg-2", "adxcfg-3";
 
 		clocks = <&clk0_ad9528 3>, <&n2_tx_device_clk_pll>;
@@ -78,11 +78,11 @@
 		clock-output-names = "n2_jesd204_tx_lane_clock";
 	};
 
-	n2_axi_ad9371_rx_xcvr: axi-ad9371-rx-xcvr@f4000 {
+	n2_axi_ad9371_rx_xcvr: axi-ad9371-rx-xcvr@94000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
-		reg = <0x000f4000 0x00001000>,
-			<0x000f8000 0x00001000>,
-			<0x000f9000 0x00001000>;
+		reg = <0x00094000 0x00001000>,
+			<0x00098000 0x00001000>,
+			<0x00099000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
 		clocks = <&clk0_ad9528 3>, <&n2_rx_device_clk_pll>;
@@ -92,11 +92,11 @@
 		clock-output-names = "n2_jesd204_rx_lane_clock";
 	};
 
-	n2_axi_ad9371_rx_os_xcvr: axi-ad9371-rx-os-xcvr@104000 {
+	n2_axi_ad9371_rx_os_xcvr: axi-ad9371-rx-os-xcvr@a4000 {
 		compatible = "adi,altera-adxcvr-1.00.a";
-		reg = <0x00104000 0x00001000>,
-			<0x00108000 0x00001000>,
-			<0x00109000 0x00001000>;
+		reg = <0x000a4000 0x00001000>,
+			<0x000a8000 0x00001000>,
+			<0x000a9000 0x00001000>;
 		reg-names = "adxcvr", "adxcfg-0", "adxcfg-1";
 
 		clocks = <&clk0_ad9528 3>, <&n2_rx_os_device_clk_pll>;
@@ -106,11 +106,11 @@
 		clock-output-names = "n2_jesd204_rx_os_lane_clock";
 	};
 
-	n2_axi_ad9371_tx_dma: axi-ad9371-tx-dma@ec000 {
+	n2_axi_ad9371_tx_dma: axi-ad9371-tx-dma@8c000 {
 		compatible = "adi,axi-dmac-1.00.a";
-		reg = <0x000ec000 0x00004000>;
+		reg = <0x0008c000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 40 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 35 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -122,11 +122,11 @@
 		};
 	};
 
-	n2_axi_ad9371_rx_dma: axi-ad9371-rx-dma@fc000 {
+	n2_axi_ad9371_rx_dma: axi-ad9371-rx-dma@9c000 {
 		compatible = "adi,axi-dmac-1.00.a";
-		reg = <0x000fc000 0x00004000>;
+		reg = <0x0009c000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 41 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 36 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -137,11 +137,11 @@
 		};
 	};
 
-	n2_axi_ad9371_rx_os_dma: axi-ad9371-rx-os-dma@10c000 {
+	n2_axi_ad9371_rx_os_dma: axi-ad9371-rx-os-dma@ac000 {
 		compatible = "adi,axi-dmac-1.00.a";
-		reg = <0x0010c000 0x00004000>;
+		reg = <0x000ac000 0x00004000>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 42 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 37 IRQ_TYPE_LEVEL_HIGH>;
 		#dma-cells = <1>;
 		clocks = <&dma_clk>;
 
@@ -152,17 +152,17 @@
 		};
 	};
 
-	n2_axi_ad9371_rx: axi-ad9371-rx-hpc-n2@110000 {
+	n2_axi_ad9371_rx: axi-ad9371-rx-hpc-n2@b0000 {
 		compatible = "adi,axi-ad9371-rx-1.0";
-		reg = <0x00110000 0x00008000>;
+		reg = <0x000b0000 0x00008000>;
 		dmas = <&n2_axi_ad9371_rx_dma 0>;
 		dma-names = "rx";
 		spibus-connected = <&n2_trx0_ad9371>;
 	};
 
-	n2_axi_ad9371_tx: axi-ad9371-tx-hpc-n2@114000 {
+	n2_axi_ad9371_tx: axi-ad9371-tx-hpc-n2@b4000 {
 		compatible = "adi,axi-ad9371-tx-1.0";
-		reg = <0x00114000 0x00004000>;
+		reg = <0x000b4000 0x00004000>;
 		dmas = <&n2_axi_ad9371_tx_dma 0>;
 		dma-names = "tx";
 		clocks = <&n2_trx0_ad9371 2>;
@@ -171,36 +171,36 @@
 		adi,axi-pl-fifo-disable;
 	};
 
-	n2_xcvr_rx_os_core: axi-ad9371-rx-obs-hpc-n2@118000 {
+	n2_xcvr_rx_os_core: axi-ad9371-rx-obs-hpc-n2@b8000 {
 		compatible = "adi,axi-ad9371-obs-1.0";
-		reg = <0x00118000 0x00001000>;
+		reg = <0x000b8000 0x00001000>;
 		dmas = <&n2_axi_ad9371_rx_os_dma 0>;
 		dma-names = "rx";
 		clocks = <&n2_trx0_ad9371 1>;
 		clock-names = "sampl_clk";
 	};
 
-	n2_tx_device_clk_pll: altera-a10-fpll@e5000 {
+	n2_tx_device_clk_pll: altera-a10-fpll@85000 {
 		compatible = "altr,a10-fpll";
-		reg = <0x000e5000 0x1000>;
+		reg = <0x00085000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
 		clock-output-names = "n2_jesd204_tx_link_clock";
 	};
 
-	n2_rx_device_clk_pll: altera-a10-fpll@f5000 {
+	n2_rx_device_clk_pll: altera-a10-fpll@95000 {
 		compatible = "altr,a10-fpll";
-		reg = <0x000f5000 0x1000>;
+		reg = <0x00095000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
 		clock-output-names = "n2_jesd204_rx_link_clock";
 	};
 
-	n2_rx_os_device_clk_pll: altera-a10-fpll@105000 {
+	n2_rx_os_device_clk_pll: altera-a10-fpll@a5000 {
 		compatible = "altr,a10-fpll";
-		reg = <0x00105000 0x1000>;
+		reg = <0x000a5000 0x1000>;
 		clocks = <&clk0_ad9528 3>;
 
 		#clock-cells = <0>;
@@ -211,7 +211,7 @@
 		compatible = "altr,spi-1.0";
 		reg = <0x00060040 0x00000020>;
 		interrupt-parent = <&intc>;
-		interrupts = <0 44 IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 39 IRQ_TYPE_LEVEL_HIGH>;
 		#address-cells = <0x1>;
 		#size-cells = <0x0>;
 	};
